Maybe a bug in the current version of act_as_list

--- a/config/locales/es.admin.yml
+++ b/config/locales/es.admin.yml
@@ -1,9 +1,6 @@
 es:
   admin:
-    cards:
-      index:
-        title: 'Fichas'
-
-    colors:
-      index:
-        title: 'Colores'
+    resources:
+      cards: 'Fichas'
+      colors: 'Colores'
+      tags: 'Categorías'
