Un montón de cambios

--- a/config/locales/es.admin.yml
+++ b/config/locales/es.admin.yml
@@ -4,6 +4,9 @@ es:
       cards: 'Fichas'
       colors: 'Colores'
       tags: 'Categorías'
+      posts: 'Noticias'
+      selections: 'Selección'
+      panfiles: 'Ficheros'
 
   resource:
     updated: 'Guardado. ¡Yeepa!'
